--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta keywords="">
+  <title>Receitas da Tai</title>
+  <link rel:="stylesheet" href="style.css"/>
+</head>
+<body>
+  <div class="principal">
+<header class="cabecalho">
 
+  <img class="imagemcabecalho" scr="" alt="Logotipo" />
+  <h1 class="titulo1"> Receitas da Tai
+          </h1>
+</header>
+<section class="direita">
+
+</section>
+  </div>
+</body>
+</html>
